cmake_minimum_required(VERSION 3.25)
project(server C)

set(CMAKE_C_STANDARD 99)
set(CMAKE_EXE_LINKER_FLAGS "-static-libgcc -static-libstdc++")
add_executable(server server.c)

IF (WIN32)
    TARGET_LINK_LIBRARIES(server PRIVATE wsock32 ws2_32)
ENDIF ()
set(CMAKE_EXE_LINKER_FLAGS "-static-libgcc -static-libstdc++")